force-app/main/default/objects/Dan360_Efectividad__c/Dan360_Efectividad__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para el registro y calculo de las efectividades del APM por mes.</description>
    <label>Efectividad</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Efectividad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Efectividades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>