force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_de_campo_efectivo__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_campo_efectivo__c</fullName>
    <description>Cantidad de dias habiles en los que el APM trabaja (se descuentan las licencias). Se vuelven a sumar los feriados para que no reste dos veces esa cantidad (los dias habiles transcurridos ya las descuenta)</description>
    <formula>IF( TODAY() &lt; Fecha_de_Fin__c,
CASE(MOD( Fecha_de_inicio__c - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( TODAY() - Fecha_de_inicio__c )/7)*5)
-
Tiempo_no_promocional__c
-
VisMed_Dias_de_Licencia_Unicos__c,
CASE(MOD( Fecha_de_inicio__c - DATE(1985,6,24),7),
0 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Fecha_de_Fin__c - Fecha_de_inicio__c )/7)*5)
-
Tiempo_no_promocional__c
-
VisMed_Dias_de_Licencia_Unicos__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de campo efectivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>