force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_de_Licencia_Transcurridos__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Licencia_Transcurridos__c</fullName>
    <description>almacena los dias de licencias NO Festivos que ya transcurrieron</description>
    <label>Días de Licencia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>