force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_feriados__c.field-meta.xml
<CustomField>
    <fullName>Dias_feriados__c</fullName>
    <label>Días feriados</label>
    <summarizedField>Dan360_Licencia__c.Cantidad_de_Dias__c</summarizedField>
    <summaryFilterItems>
        <field>Dan360_Licencia__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Licencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Dan360_Licencia__c.Estado__c</field>
        <operation>equals</operation>
        <value>Aprobada</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Dan360_Licencia__c.Motivo__c</field>
        <operation>equals</operation>
        <value>Festivo</value>
    </summaryFilterItems>
    <summaryForeignKey>Dan360_Licencia__c.Efectividad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>