force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_feriados_Transcurridos__c.field-meta.xml
<CustomField>
    <fullName>Dias_feriados_Transcurridos__c</fullName>
    <label>Días feriados Transcurridos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>