force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_habiles_del_ciclo__c.field-meta.xml
<CustomField>
    <fullName>Dias_habiles_del_ciclo__c</fullName>
    <formula>Dias_Totales_del_Ciclo__c 
-
Dias_feriados_Transcurridos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días habiles del ciclo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>