force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_habiles_transcurridos__c.field-meta.xml
<CustomField>
    <fullName>Dias_habiles_transcurridos__c</fullName>
    <description>Cantidad de dias habiles trancurridos hasta la fecha de hoy.</description>
    <formula>IF(TODAY() &lt; Fecha_de_inicio__c, 0, 
    IF(TODAY() &gt; Fecha_de_Fin__c,
       Dias_habiles_del_ciclo__c,
							CASE(MOD( Fecha_de_inicio__c - DATE(1985,6,24),7),
            0 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
            1 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
            2 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
            3 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
            4 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
            5 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
            6 , CASE( MOD( TODAY() - Fecha_de_inicio__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
            999)
        +
        (FLOOR(( TODAY() - Fecha_de_inicio__c )/7)*5)
						 	-
							 Dias_feriados_Transcurridos__c
				    )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días hábiles transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>