force-app/main/default/objects/Dan360_Efectividad__c/fields/Dias_Totales_del_Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Dias_Totales_del_Ciclo__c</fullName>
    <formula>CASE(MOD( Fecha_de_inicio__c - DATE(1985,6,24),7),
0 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Fecha_de_Fin__c - Fecha_de_inicio__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Fecha_de_Fin__c - Fecha_de_inicio__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Totales del Ciclo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>