force-app/main/default/objects/Dan360_Efectividad__c/fields/Numero_de_mes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_mes__c</fullName>
    <formula>VisMed_Ciclo__r.Numero_de_mes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>