force-app/main/default/objects/Dan360_Efectividad__c/fields/Tiempo_no_promocional__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_no_promocional__c</fullName>
    <label>Tiempo no promocional (días)</label>
    <summarizedField>Dan360_Licencia__c.Cantidad_de_Horas_Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Dan360_Licencia__c.Estado__c</field>
        <operation>equals</operation>
        <value>Aprobada</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Dan360_Licencia__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Tiempo no Promocional</value>
    </summaryFilterItems>
    <summaryForeignKey>Dan360_Licencia__c.Efectividad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>