force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_APM__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APM__c</fullName>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Efectividades</relationshipLabel>
    <relationshipName>Efectividades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>