force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Ciclo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Ciclo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciclo</label>
    <referenceTo>VisMed_Ciclo__c</referenceTo>
    <relationshipLabel>Efectividades</relationshipLabel>
    <relationshipName>Efectividades</relationshipName>
    <type>Lookup</type>
</CustomField>