force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Cmpt_Tiempo_no_promocional__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Cmpt_Tiempo_no_promocional__c</fullName>
    <formula>VisMed_Ciclo__r.VisMed_Cmpt_Tiempo_no_promocional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensatorio Tiempo no Promocional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>