force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Codigo_de_duplicidad__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Codigo_de_duplicidad__c</fullName>
    <label>Codigo de duplicidad</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>