force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Dias_de_Licencia_Unicos__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Dias_de_Licencia_Unicos__c</fullName>
    <description>Almacena los dias de licencias que ya transcurrieron.</description>
    <label>Días de Licencia Unicos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>