force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Efectividad__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Efectividad__c</fullName>
    <label>Efectividad</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>