force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Promedio__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Promedio__c</fullName>
    <formula>(VisMed_Visitas_realizadas__c / Dias_de_campo_efectivo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio visitas realizadas por día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>