force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Target_Diario__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Target_Diario__c</fullName>
    <label>Target Diario</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>