force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Visitas_realizadas__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Visitas_realizadas__c</fullName>
    <label>Visitas realizadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>