force-app/main/default/objects/Dan360_Efectividad__c/fields/VisMed_Visitas_restantes__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Visitas_restantes__c</fullName>
    <label>Visitas restantes</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>