force-app/main/default/objects/Dan360_Efectividad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VisMed_Ciclo__c</columns>
    <columns>VisMed_APM__c</columns>
    <columns>VisMed_Target_Diario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VisMed_Ciclo__c</field>
        <operation>contains</operation>
        <value>2024</value>
    </filters>
    <label>All</label>
</ListView>